# activity-relay

./: .gitignore  Dockerfile  Pipfile  Procfile  README.md  app.json  docker.sh  pyproject.toml  relay.yaml.example  relay_template.yaml  requirements.txt  setup.cfg  viera.yaml.example
docs/: commands.md  configuration.md  index.md  installation.md
installation/: relay.caddy  relay.nginx  relay.service
relay/: __init__.py  __main__.py  actor.py  config.py  database.py  default.py  http_debug.py  http_signatures.py  http_stats.py  logger.py  manage.py  misc.py  nodeinfo.py  processors.py  remote_actor.py  views.py  webfinger.py
viera/: __init__.py  __main__.py  actor.py  authreqs.py  http_signatures.py  irc.py  irc_envelope.py  remote_actor.py  webfinger.py
