[metadata]
name = relay
description = Generic LitePub relay (works with all LitePub consumers and Mastodon)
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://git.pleroma.social/pleroma/relay
license = AGPLv3
license_file = LICENSE
classifiers =
    Environment :: Console
    License :: OSI Approved :: AGPLv3 License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
project_urls =
    Source = https://git.pleroma.social/pleroma/relay
    Tracker = https://git.pleroma.social/pleroma/relay/-/issues

[options]
zip_safe = False
packages = find:
install_requires =
		aiohttp>=3.5.4
		async-timeout>=3.0.0
		attrs>=18.1.0
		chardet>=3.0.4
		idna>=2.7
		idna-ssl>=1.1.0; python_version < "3.7"
		multidict>=4.3.1
		pycryptodome>=3.9.4
		PyYAML>=5.1
		simplejson>=3.16.0
		yarl>=1.2.6
		cachetools
		async_lru
python_requires = >=3.6
